...
            onGesamt,
        )
        HorizontalDivider()
        Ausgabezeile(
            R.string.bericht_ausgabe_highend_titel,
            R.string.bericht_ausgabe_highend_text,
            "btn_bericht_erstellen_v2",
            true,
            onHighEnd,
        )
    }
}

...
